internal/metrics/resource/resources/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: %d
static_resources:
  listeners:
    - name: prometheus_listener
      address:
        socket_address:
          address: 127.0.0.1
          port_value: %d
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: prometheus_cluster
                          timeout: %s
              http_filters:
                - name: envoy.filters.http.lua
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                    default_source_code:
                      inline_string: |
                        function envoy_on_request(request_handle)
                        local file = io.open("/var/run/secrets/kubernetes.io/serviceaccount/token", "r")
                        if file then
                            local token = file:read("*all")
                            file:close()

                            request_handle:headers():add("Authorization", "Bearer " .. token)
                        else
                            request_handle:logError("Failed to open token file")
                        end
                        end
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: prometheus_cluster
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: prometheus_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: %s
                    port_value: %s
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            validation_context:
              trusted_ca:
                filename: "/etc/certs/service-ca.crt"
